feat: update code add menu and section

--- a/index.html
+++ b/index.html
@@ -1,33 +1,146 @@
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Pousada Alto do Capivari</title>
-    <icon href="img/logo-2.jpg"></icon>
-    <meta name="description" content="Pousada Alto do Capivari proporciona uma viagem repleta de tranquilidade.">
-    <meta name="keywords" content="Pousada, Tranquilidade, Descanso">
-    <meta name="robots" content="all">
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="content">
-        <h1 class="title">Pousada Alto do Capivari</h1>
-        <p class="text">
-          A Pousada Alto do Capivari proporciona uma viagem repleta de
-          tranquilidade, com uma vista incrível para a natureza, a pousada
-          oferece um ambiente aconchegante e familiar, com quartos confortáveis
-          e um café da manhã delicioso.
-        </p>
-        <img class="banner" src="img/banner-1.jpg" alt="Pousada Alto do Capivari" />
-        <p>
-          <a aria-label="Chat on WhatsApp" href="https://wa.me/5548996789668?text=Reserva%20pelo%20site">
-            <img width="40%" height="auto" alt="Chat on WhatsApp" src="img/whatsapp-2.png" />
-          </a>
-        </p>
-      </div>
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pousada Alto do Capivari</title>
+  <meta name="description" content="Pousada Alto do Capivari proporciona uma viagem repleta de tranquilidade.">
+  <meta name="keywords" content="Pousada, Tranquilidade, Descanso">
+  <meta name="robots" content="all">
+  <link rel="stylesheet" href="css/style.css"/>
+</head>
+<body>
+
+<header>
+  <h1 class="title">Pousada Alto do Capivari</h1>
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#chales">Chalés</a></li>
+      <li><a href="#area-externa">Área Externa</a></li>
+      <li><a href="#galeria-fotos">Galeria de Fotos</a></li>
+      <li><a href="#localizacao">Localização</a></li>
+      <li><a href="https://wa.me/5548996789668?text=Reserva%20pelo%20site"
+             target="_blank" >Contato</a></li>
+    </ul>
+  </nav>
+</header>
+
+<section id="home">
+  <div style="text-align: center;">
+    <h2>Seja bem-vindo(a) a Pousada Alto do Capivari</h2>
+    <img class="banner" src="img/banner-1.jpg" alt="Pousada Alto do Capivari"/>
+  </div>
+</section>
+
+<section id="chales">
+  <h2>Chalés</h2>
+  <ul>
+    <li>Chalés para casal com opção de uma segunda cama de solteiro.</li>
+    <li>Cozinha compacta, porém completa, e com todos os utensílios domésticos, frigobar, fogão Cooktop por indução,
+      chaleira elétrica, sanduicheira, garrafa térmica, pratos, talheres, copos, canecas, balde de gelo, saca rolha,
+      etc...
+    </li>
+    <li>Ventilador de teto.</li>
+    <li>Mezanino para relaxar, ler um bom livro, ter uma boa conversa ou até mesmo trabalhar.</li>
+    <li>Lareira ecológica a base de álcool combustível, sem cheiro e com risco mínimo de acidente ou incêndio.</li>
+    <li>Colchão magnético com massageador terapêutico, com roupas de camas sempre limpas e higienizadas, capas de
+      proteção no colchão e nos travesseiros.
+    </li>
+    <li>TV de 40 polegadas com Netflix e YouTube.</li>
+    <li>Banheiro com secador de cabelo e sabonete.</li>
+  </ul>
+</section>
+
+<section id="area-externa">
+  <h2>Área Externa</h2>
+  <ul>
+    <li>Área externa com aproximadamente 8.000 m² para atividades ao ar livre, com pomar com várias espécies de frutas,
+      orquidário, churrasqueira coberta em área comum pra receber até 12 pessoas, churrasqueiras na natureza,
+      churrasqueira portátil de metal, lagoas com opção de pesque e pague com várias espécies de peixes e aves.
+    </li>
+    <li>Rio com águas cristalinas próprio para banho, espaço para caminhadas e uma linda vista das montanhas da Serra do
+      Tabuleiro.
+    </li>
+    <li>Despertar com o cantar de pássaros livres realmente é muito bom e não tem preço.</li>
+  </ul>
+</section>
+
+<section id="galeria-fotos">
+  <h2>Galeria de Fotos</h2>
+  <div class="slider">
+    <div class="slider-content">
+      <div class="slider-item"><img src="img/info-01.jpg" alt="Imagem 1"></div>
+      <div class="slider-item"><img src="img/info-02.jpg" alt="Imagem 2"></div>
+      <div class="slider-item"><img src="img/info-03.jpg" alt="Imagem 3"></div>
+      <div class="slider-item"><img src="img/info-04.jpg" alt="Imagem 4"></div>
+      <div class="slider-item"><img src="img/info-05.jpg" alt="Imagem 5"></div>
+      <div class="slider-item"><img src="img/info-06.jpg" alt="Imagem 6"></div>
+      <div class="slider-item"><img src="img/info-07.jpg" alt="Imagem 7"></div>
+      <div class="slider-item"><img src="img/info-08.jpg" alt="Imagem 8"></div>
+      <div class="slider-item"><img src="img/info-09.jpg" alt="Imagem 9"></div>
+      <div class="slider-item"><img src="img/info-10.jpg" alt="Imagem 10"></div>
+      <div class="slider-item"><img src="img/info-11.jpg" alt="Imagem 11"></div>
+      <div class="slider-item"><img src="img/info-12.jpg" alt="Imagem 12"></div>
+      <div class="slider-item"><img src="img/info-13.jpg" alt="Imagem 13"></div>
     </div>
-  </body>
+    <button class="prev" onclick="prevSlide()">&#10094;</button>
+    <button class="next" onclick="nextSlide()">&#10095;</button>
+  </div>
+</section>
+
+<section id="localizacao">
+  <h2>Localização</h2>
+  <ul>
+    <li>Localizada na cidade de São Bonifácio, a 70 KM de Florianópolis, a Pousada Alto do Capivari é sinônimo de
+        tranquilidade e Sossego.
+    </li>
+  </ul>
+  <div id="map-container">
+    <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.327740145038!2d-48.95313234968183!3d-27.844965482746784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d1fd0b5875ed5d%3A0x112e0b35079a39ee!2sPousada%20Alto%20do%20Capivari!5e0!3m2!1sen!2sbr!4v1645990072814!5m2!1sen!2sbr" allowfullscreen loading="lazy"></iframe>
+  </div>
+  <a href="https://www.google.com/maps/dir//Pousada+Alto+do+Capivari/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x94d1fd0b5875ed5d:0x112e0b35079a39ee?sa=X&ved=2ahUKEwiV2p_Am8z3AhWLJLkGHYmZBFsQ9Rd6BAhMECw" target="_blank" class="route-btn">Obter Rota</a>
+</section>
+
+<footer>
+  <p>Contato whatsapp: <a aria-label="Chat on WhatsApp" href="https://wa.me/5548996789668?text=Reserva%20pelo%20site"
+  target="_blank" class="whats-btn">(48) 99678-9668</a></p>
+  <p>Todos os direitos reservados &copy; 2024</p>
+</footer>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+        const headerOffset = document.querySelector('header').offsetHeight;
+        const sectionID = this.getAttribute('href').substring(1);
+        const section = document.getElementById(sectionID);
+        window.scrollTo({
+          top: section.offsetTop - headerOffset,
+          behavior: 'smooth'
+        });
+      });
+    });
+  });
+
+  let slideIndex = 0;
+  function showSlide(index) {
+    const slides = document.querySelectorAll('.slider-item');
+    if (index >= slides.length) {
+      slideIndex = 0;
+    } else if (index < 0) {
+      slideIndex = slides.length - 1;
+    }
+    slides.forEach(slide => slide.style.transform = `translateX(-${slideIndex * 100}%)`);
+  }
+  function prevSlide() {
+    showSlide(--slideIndex);
+  }
+  function nextSlide() {
+    showSlide(++slideIndex);
+  }
+</script>
+
+</body>
 </html>
