feat: add init text and banner

--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pousada Alto do Capivari</title>
-  <meta name="description" content="Pousada Alto do Capivari proporciona uma viagem repleta de tranquilidade.">
-  <meta name="keywords" content="Pousada, Tranquilidade, Descanso">
+  <title>Amanda Buscaratti - Psicóloga / Neuropsicóloga</title>
+  <meta name="description" content="Amanda Buscaratti - Psicóloga / Neuropsicóloga">
+  <meta name="keywords" content="Amanda Buscaratti, Psicóloga, Neuropsicóloga">
   <meta name="robots" content="all">
   <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
 <header>
-  <h1 class="title">Pousada Alto do Capivari</h1>
+  <h1 class="title">Amanda Buscaratti</h1>
+  <h2 class="subtitle">Psicóloga / Neuropsicóloga - CRP: 06/181713</h2>
   <nav>
     <ul>
       <li><a href="#home">Home</a></li>
-      <li><a href="#chales">Chalés</a></li>
-      <li><a href="#area-externa">Área Externa</a></li>
-      <li><a href="#galeria-fotos">Galeria de Fotos</a></li>
-      <li><a href="#localizacao">Localização</a></li>
-      <li><a href="https://wa.me/5548996789668?text=Reserva%20pelo%20site"
+      <li><a href="#temas">Temas que trabalho</a></li>
+      <li><a href="#biografia">Biografia</a></li>
+      <li><a href="#formacao">Formação</a></li>
+      <li><a href="https://wa.me/5511911300058?text=Contato%20pelo%20site"
              target="_blank" >Contato</a></li>
     </ul>
   </nav>
@@ -28,83 +28,57 @@
 
 <section id="home">
   <div style="text-align: center;">
-    <h2>Seja bem-vindo(a) a Pousada Alto do Capivari</h2>
-    <img class="banner" src="img/banner-1.jpg" alt="Pousada Alto do Capivari"/>
+    <h2>Seja bem-vindo(a)</h2>
+    <img class="banner" src="img/banner.jpg" alt="Amanda Buscaratti - Psicóloga / Neuropsicóloga"/>
   </div>
 </section>
 
-<section id="chales">
-  <h2>Chalés</h2>
+<section id="temas">
+  <h2>Temas que trabalho</h2>
   <ul>
-    <li>Chalés para casal com opção de uma segunda cama de solteiro.</li>
-    <li>Cozinha compacta, porém completa, e com todos os utensílios domésticos, frigobar, fogão Cooktop por indução,
-      chaleira elétrica, sanduicheira, garrafa térmica, pratos, talheres, copos, canecas, balde de gelo, saca rolha,
-      etc...
-    </li>
-    <li>Ventilador de teto.</li>
-    <li>Mezanino para relaxar, ler um bom livro, ter uma boa conversa ou até mesmo trabalhar.</li>
-    <li>Lareira ecológica a base de álcool combustível, sem cheiro e com risco mínimo de acidente ou incêndio.</li>
-    <li>Colchão magnético com massageador terapêutico, com roupas de camas sempre limpas e higienizadas, capas de
-      proteção no colchão e nos travesseiros.
-    </li>
-    <li>TV de 40 polegadas com Netflix e YouTube.</li>
-    <li>Banheiro com secador de cabelo e sabonete.</li>
+    <li>Acompanhamento psicológico de idosos</li>
+    <li>Ansiedade</li>
+    <li>Conflitos Amorosos</li>
+    <li>Conflitos Familiares</li>
+    <li>Depressão</li>
+    <li>Dor</li>
+    <li>Estresse</li>
+    <li>Estresse Pós Traumático</li>
+    <li>Fobia Social</li>
+    <li>Idoso / Terceira Idade</li>
+    <li>Medos e Fobias</li>
+    <li>Neuropsicologia</li>
+    <li>Orientação psicológica</li>
+    <li>Psicologia Clínica</li>
+    <li>Relacionamentos Afetivos</li>
+    <li>Saúde Mental</li>
+    <li>Transtorno Bipolar</li>
+    <li>Transtorno de Humor</li>
+    <li>Avaliação Psicológica</li>
   </ul>
 </section>
 
-<section id="area-externa">
-  <h2>Área Externa</h2>
-  <ul>
-    <li>Área externa com aproximadamente 8.000 m² para atividades ao ar livre, com pomar com várias espécies de frutas,
-      orquidário, churrasqueira coberta em área comum pra receber até 12 pessoas, churrasqueiras na natureza,
-      churrasqueira portátil de metal, lagoas com opção de pesque e pague com várias espécies de peixes e aves.
-    </li>
-    <li>Rio com águas cristalinas próprio para banho, espaço para caminhadas e uma linda vista das montanhas da Serra do
-      Tabuleiro.
-    </li>
-    <li>Despertar com o cantar de pássaros livres realmente é muito bom e não tem preço.</li>
-  </ul>
+<section id="biografia">
+  <h2>Biografia</h2>
+  <p>Olá! Meu nome é Amanda, é um prazer tê-lo por aqui! Vamos conversar um pouquinho?</p>
+  <p>Em algum momento todos nós passamos por  adversidades, por emoções intensas, por dificuldades de se relacionar ou de se sentir compreendido. As vezes essas situações nos impedem de trabalhar, estudar ou estar com quem amamos, e até mesmo de estar confortável conosco mesmo. E mediante a isso muitas vezes, com muita coragem, buscamos por apoio, as vezes por nossa própria conta, as vezes encaminhado por outro profissional, ou por indicação de um parente e amigo.</p>
+  <p>Como profissional de Psicologia, estou aqui para auxiliar, meu proposito é ouvir, compreender, organizar e alinhar suas demandas, ou seja, sabe aquelas sensações que você tem, sentimentos e/ou emoções, a partir do manejo clinico, organizar e te guiar para a compreensão, fortalecendo seu conhecimento de si mesmo e de sua condição (caso exista um diagnóstico), colaborando para aquisição de um novo repertório de comportamento e/ou pensamento que permita a melhora de sintomas e aumento da qualidade de vida.</p>
+  <p>Atendo pela abordagem cognitiva- comportamental que é muito clara e direta. É utilizada para tratar nossos problemas atuais e diversos transtornos mentais de forma eficiente. Seu objetivo principal é identificar padrões de comportamento, pensamentos, crenças e hábitos que estão na origem dos problemas, indicando, a partir disso, técnicas para alterar essas percepções de forma positiva.</p>
+  <p>Todo esse processo terapêutico acontece de forma colaborativa, através do entendimento de sua singularidade, do autoconhecimento e da compreensão de suas necessidades.</p>
+  <p>Estou à disposição para juntos começarmos essa jornada!</p>
 </section>
 
-<section id="galeria-fotos">
-  <h2>Galeria de Fotos</h2>
-  <div class="slider">
-    <div class="slider-content">
-      <div class="slider-item"><img src="img/info-01.jpg" alt="Imagem 1"></div>
-      <div class="slider-item"><img src="img/info-02.jpg" alt="Imagem 2"></div>
-      <div class="slider-item"><img src="img/info-03.jpg" alt="Imagem 3"></div>
-      <div class="slider-item"><img src="img/info-04.jpg" alt="Imagem 4"></div>
-      <div class="slider-item"><img src="img/info-05.jpg" alt="Imagem 5"></div>
-      <div class="slider-item"><img src="img/info-06.jpg" alt="Imagem 6"></div>
-      <div class="slider-item"><img src="img/info-07.jpg" alt="Imagem 7"></div>
-      <div class="slider-item"><img src="img/info-08.jpg" alt="Imagem 8"></div>
-      <div class="slider-item"><img src="img/info-09.jpg" alt="Imagem 9"></div>
-      <div class="slider-item"><img src="img/info-10.jpg" alt="Imagem 10"></div>
-      <div class="slider-item"><img src="img/info-11.jpg" alt="Imagem 11"></div>
-      <div class="slider-item"><img src="img/info-12.jpg" alt="Imagem 12"></div>
-      <div class="slider-item"><img src="img/info-13.jpg" alt="Imagem 13"></div>
-    </div>
-    <button class="prev" onclick="prevSlide()">&#10094;</button>
-    <button class="next" onclick="nextSlide()">&#10095;</button>
-  </div>
+<section id="formacao">
+  <h2>Formação</h2>
+  <p>Graduada em Psicologia pela UNIAN com foco em Terapia cognitivo comportamental , Especialização em Neuropsicologia, Pós Graduação em  Psicobiologia pela FAMEESP,  com cursos de extensão em Direito da Criança e do Adolescente (USP), Educação e Direitos Humanos (USP), Conceitos e modelos cognitivos - Psicobiologia (USP) , Conceitos básicos de saúde em meio a pandemia Covid-19 (UNIFESP), Neurociências (UNIFESP), Envelhecimento no Passado - Arqueologia (USP), Cannabis Medicinal (UNIFESP), Dor e Sofrimento nas diferentes tradições religiosas (UNIFESP), Competências Profissionais, Emocionais e Tecnológicas para Tempos de Mudança (PUCRS), Introdução à Terapia do Esquema (NIDO), Terapia Cognitivo Comportamental na Prática (NIDO) e  O básico da Terapia do Esquema (WAINER).</p>
 </section>
 
-<section id="localizacao">
-  <h2>Localização</h2>
-  <ul>
-    <li>Localizada na cidade de São Bonifácio, a 70 KM de Florianópolis, a Pousada Alto do Capivari é sinônimo de
-        tranquilidade e Sossego.
-    </li>
-  </ul>
-  <div id="map-container">
-    <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.327740145038!2d-48.95313234968183!3d-27.844965482746784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d1fd0b5875ed5d%3A0x112e0b35079a39ee!2sPousada%20Alto%20do%20Capivari!5e0!3m2!1sen!2sbr!4v1645990072814!5m2!1sen!2sbr" allowfullscreen loading="lazy"></iframe>
-  </div>
-  <a href="https://www.google.com/maps/dir//Pousada+Alto+do+Capivari/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x94d1fd0b5875ed5d:0x112e0b35079a39ee?sa=X&ved=2ahUKEwiV2p_Am8z3AhWLJLkGHYmZBFsQ9Rd6BAhMECw" target="_blank" class="route-btn">Obter Rota</a>
-</section>
 
 <footer>
-  <p>Contato whatsapp: <a aria-label="Chat on WhatsApp" href="https://wa.me/5548996789668?text=Reserva%20pelo%20site"
-  target="_blank" class="whats-btn">(48) 99678-9668</a></p>
+  <p>Contato whatsapp: <a aria-label="Chat on WhatsApp" href="https://wa.me/5511911300058?text=Contato%20pelo%20site"
+  target="_blank" class="btn">(11) 91130-0058</a>
+     Contato e-mail: <a aria-label="Chat on WhatsApp" href="mailto:psyche.buscaratti@gmail.com"
+  target="_blank" class="btn">psyche.buscaratti@gmail.com</a></p>
   <p>Todos os direitos reservados &copy; 2024</p>
 </footer>
 
@@ -123,23 +97,6 @@
       });
     });
   });
-
-  let slideIndex = 0;
-  function showSlide(index) {
-    const slides = document.querySelectorAll('.slider-item');
-    if (index >= slides.length) {
-      slideIndex = 0;
-    } else if (index < 0) {
-      slideIndex = slides.length - 1;
-    }
-    slides.forEach(slide => slide.style.transform = `translateX(-${slideIndex * 100}%)`);
-  }
-  function prevSlide() {
-    showSlide(--slideIndex);
-  }
-  function nextSlide() {
-    showSlide(++slideIndex);
-  }
 </script>
 
 </body>
